kubernetes/apps/networking/external-services/ingresses/gitea.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app gitea
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: ${NAS_ADDR}
  ports:
    - name: webui
      port: 8687
      protocol: TCP
      targetPort: 8687
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: >-
      networking-headers@kubernetescrd,
      networking-local-only@kubernetescrd
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: traefik
  rules:
    - host: &host gitea.elcattivo.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 8687
  tls:
    - hosts:
        - *host
