kubernetes/apps/networking/external-services/ingresses/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app minio
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: ${NAS_ADDR}
  ports:
    - name: webui
      port: 9102
      protocol: TCP
      targetPort: 9102
    - name: api
      port: 9101
      protocol: TCP
      targetPort: 9101
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-admin
  labels:
    app.kubernetes.io/name: minio-admin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: >-
      networking-headers@kubernetescrd,
      networking-local-only@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: &host minio-admin.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9102
  tls:
    - hosts:
        - *host
      secretName: ${SECRET_CERT_NAME}-prod-tls
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  labels:
    app.kubernetes.io/name: minio-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: >-
      networking-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: &host minio.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9101
  tls:
    - hosts:
        - *host
      secretName: ${SECRET_CERT_NAME}-prod-tls
---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: &name minio
#   namespace: networking
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - kind: Rule
#       match: Host(`minio-admin.${SECRET_DOMAIN}`)
#       middlewares:
#         - name: headers
#         - name: authelia
#       services:
#         - name: *name
#           port: 9101
#     - kind: Rule
#       match: Host(`minio.${SECRET_DOMAIN}`)
#       middlewares:
#         - name: headers
#         - name: local-only
#       services:
#         - name: *name
#           port: 9102
#   tls:
#     secretName: ${SECRET_CERT_NAME}-prod-tls
