kubernetes/apps/networking/external-services/ingresses/nas.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app nas
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: $(NAS_ADDR)
  ports:
    - name: webui
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name nas
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nas.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
        - name: local-only
      services:
        - name: *name
          port: 80
          namespace: networking
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
